Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -54,7 +54,7 @@
  NOT_SIB_TO_BE_SEI:0 "シベリア開拓地は通常の入植地のように所有することができません。"
  SIB_FRONTIER_TOOLTIP:0 "この植民地は毎月$MIN|Y$から$MAX|Y$の入植者を得ます。"
  SIB_FRONT_TXT:0 "シベリア開拓地"
- NOSF_NO_POINTS:0 "シベリアの開拓地の設置には§Y$COST$§!£dip£必要ですが、あなたは§Y$VAL$§!しか持っていません。"
+ NOSF_NO_POINTS:0 "シベリア開拓地の設置には§Y$COST$§!£dip£が必要ですが、§Y$VAL$§!しか持っていません。"
  NOSF_HAS_OWNER:1 "すでに植民地化が進行している州に新たにシベリア開拓地を設置することはできません。"
  NOSF_ALREADY_COLONISED:0 "何らかの植民地化が進んでいる州にシベリア開拓地を設置することはできません。"
  NOSF_NO_TRACE_HOME:0 "開拓地は首都と接続された都市の近隣にのみ設置できます。"
@@ -548,7 +548,7 @@
  ABANDONSTATE_CAPITAL:1 "我々の首都があるステートを放棄することはできません。\n"
  ABANDONSTATE_MAKE:0 "$NAME$は§Yステート§!です。\n（クリックするとテリトリーに変換されます）"
  STATE_IRO:0 "$NAME$は§Yステート§!です。"
- STATE_DRO:1 "国土はいくつかのテリトリーに分かれており、ある地域に属するすべての州が一つのテリトリーとなります。テリトリーは、国土の不可欠な地域として、国家のステートにすることができます。 これにより、首都からの距離に応じて維持費が必要になりますが、自治率の最小値は大幅に低下します。 \n\nステートやテリトリーの開発度は領土管理限界を消費します。テリトリーでは、その開発度のうち25％のみが領土管理限界のコストとして計算されます。領土管理限界は、政府ランクを上げ、統治技術を進歩させ、統治アイデアグループを完成させることによって増やすことができます。"
+ STATE_DRO:1 "国土はいくつかのテリトリーに分かれており、ある地域に属するすべての州が一つのテリトリーとなります。テリトリーは、国土の不可欠な地域として、国家のステートにすることができます。 これにより、首都からの距離に応じて維持費が必要になりますが、自治率の最小値は大幅に低下します。 \n\nステートやテリトリーの開発度は領土管理限界を消費します。テリトリーでは、その開発度のうち25%のみが領土管理限界のコストとして計算されます。領土管理限界は、政府ランクを上げ、統治技術を進歩させ、統治アイデアグループを完成させることによって増やすことができます。"
  CONFIRMAKESTATETITLE:0 "テリトリーをステートに変換"
  CONFIRMMAKESTATETEXT:1 "$NAME$をステートにすることで毎月の維持費は$COST|Y$¤になりますが、自治率が低いレベルに下がった場合には収入が約$INC|Y$¤増加します。また、その地域からの人的資源と水兵も増加します。\n\n$NAME$をステートにすると領土管理限界のうち$CAP|Y0$を使用し、合計$USED_CAP|Y0$になります。"
  CONFIRABANDONSTATEITLE:0 "ステートを放棄してテリトリーに戻す"
@@ -586,9 +586,9 @@
  NOAB_NO_FORT:0 "要塞が無いので砲撃すべき壁もありません。"
  NOAB_ALREADY_ASSAULTING:0 "現在突撃中です。壁を崩すことはできません。"
  NOAB_ALREADY_BREACH:0 "この要塞の壁は既に崩れています。"
- NOAB_NO_POINTS:0 "砲撃命令を出すには§Y$COST$§!£mil£が必要ですが、現在§Y$VAL$§!しか持っていません。"
+ NOAB_NO_POINTS:0 "砲撃を命令するには§Y$COST$§!£mil£が必要ですが、§Y$VAL$§!しか持っていません。"
  ORDER_ARTILLERY_BARRAGE_IRO:0 "§Y$COST$§W£mil£のコストで砲撃命令を出すことで、壁を崩すことができるでしょう。"
- NOAB_NOT_ENOUGH_ART:0 "効率的な砲撃を行うには、各要塞レベルで少なくとも完全な砲兵連隊を持つ必要があります。要塞は$FORT|Y$の価値がありますが、あなたは$ART|Y$の砲兵しか持っていません。"
+ NOAB_NOT_ENOUGH_ART:0 "効率的な砲撃を行うには、各要塞レベル分の砲兵連隊を最低でも揃える必要があります。要塞は$FORT|Y$の価値があるのに対し、$ART|Y$の砲兵しか持っていません。"
  WARSCORE_NO_FORT:0 "要塞化されていない：$VALUE$\n"
  opinion_forced_return_territory:0 "領土を返還するよう我々へ強制した"
  FORT_LEVEL_NOT_TRIGGER:0 "要塞レベルは$VAL|Y$未満です。\n"
@@ -770,7 +770,7 @@
  TOTAL_DEVELOPMENT_GROWTH_LESS_THAN:0 "総開発度の成長が$VAL|Y$未満である\n"
  TOTAL_DEVELOPMENT_GROWTH_AT_LEAST:0 "総開発度の成長が$VAL|Y$以上である\n"
  OFR_DEVELOPMENT_LESS_THAN:0 "総開発度が$OVERLORD$の§Y$VAL$%§!未満である\n"
- OFR_DEVELOPMENT_AT_LEAST:0 "総開発が$OVERLORD$の§Y$VAL$%§!以上である\n"
+ OFR_DEVELOPMENT_AT_LEAST:0 "総開発度が$OVERLORD$の§Y$VAL$%§!以上である\n"
  EMPTY_BUILDING_SLOT:0 "この建築枠は空いており、別の建造物を建設できます。"
  EMPTY_BUILDING_SLOT_OTHER:0 "この建築枠は空いており、別の建造物を建設できます。"
  OBSOLETE_FORT:0 "§Y$ATTACKER$§!のために時代遅れであることが原因で$VAL$の補正。"
@@ -870,7 +870,7 @@
  PIRATE_HUNT_NAVY_NO_SHIPS:0 "海賊狩りのためには大型船、小型船またはガレー船が必要です。ガレー船は内海でのみ活動することができます。輸送艦は海賊狩りには参加できません。"
  PIRATE_HUNT_MOVEMENT_LOCKED:0 "目的地がすでに設定されている場合は、艦隊を派遣して海賊狩りを行うことはできません。目的地に到着するまで待ってください。"
  COL_MERCH_BONUS:0 "少なくとも$SIZE|Y$都市を持っていることにより、それは我々に商人のボーナスを提供します。"
- COL_MERCH_BONUS_SMALL:0 "この植民地国家は商人のボーナスを提供するには小さすぎます。彼らは$SIZE|Y$都市を支配する必要がありますが、現在$CURR|R$都市しか持っていません。"
+ COL_MERCH_BONUS_SMALL:0 "この植民地国家は小さすぎてボーナスの商人を提供してくれません。彼らは$SIZE|Y$都市を支配する必要がありますが、現在$CURR|R$都市しか持っていません。"
  BUILD_POWER_DESC2:0 "このアイデアの採用には$VAL|Y$の$TYPE$点が必要です。"
  IDEAS_MORE_EXPENSIVE:0 "同じカテゴリのアイデアグループの半分以上のアイデアを有することで、よりコストがかかるようになります：\n$NAME$：$IMPACT|+$"
  IDEA_GROUP_STACKING_WARNING:0 "同じカテゴリのアイデアグループの半分以上のアイデアを有することで、それはよりコストがかかるようになります。"
@@ -1125,7 +1125,7 @@
  ALREADY_THIS_IMP_REFORM:0 "帝国はすでに「§Y$WHICH$§!」を制定しています。"
  TOO_FAR_AHEAD_THIS_IMP_REFORM:1 "$WHICH$はあまりにも進んだ改革であり、我々はまず他の改革を制定しなければなりません。"
  NOT_ENOUGH_BACKERS_IMP_REFORM:0 "議会において改革のための十分な支持がありません、§G$FOR$§!がそれに賛成し、§R$AGAINST$§!が反対しています！"
- NOT_ENOUGH_AUTHORITY_IMP_REFORM:0 "少なくとも§R$COST$§!の帝国の権威が必要ですが、あなたは現在§Y$CURR$§!しか持っていません。"
+ NOT_ENOUGH_AUTHORITY_IMP_REFORM:0 "少なくとも§R$COST$§!の帝国の権威が必要ですが、§Y$CURR$§!しか持っていません。"
  ENACT_REFORM:0 "§Y$REFORM$§!の制定により、あなたの帝国の権威はすべて削除されます。"
  MEMBER_BACKING_DUE_TO:0 "彼らは以下の要因により「§G$REFORM$§!」を支持しています：（$SCORE$）"
  MEMBER_OPPOSE_DUE_TO:0 "彼らは以下の要因により「§R$REFORM$§!」に反対しています：（$SCORE$）"
@@ -1200,7 +1200,7 @@
  ARMY_TRADITION_DRO:0 "陸軍の伝統は、あなたの国家で蓄積された陸軍の経験値です。伝統はアイデア、建物、戦闘及び探検から得られます。"
  CURRENT_EFFECTS:0 "§Y現在の効果§!"
  TRADE_THROUGH_TT:0 "$WHO$は交易ノード§Y$WHERE$§Wに属し、最も近い我々の中核州、または我々が港湾使用権を持つ港から$COL$$RANGE$§!の距離にあります。\n$POWER$"
- TRADE_POWER_MAP_TT_EXPL:0 "ノードに州の§Y$PERC$％§!にあたる$VAL$の交易力をもたらします。"
+ TRADE_POWER_MAP_TT_EXPL:0 "ノードに州の§Y$PERC$%§!にあたる$VAL$の交易力をもたらします。"
  TRADE_GOODS_SIZE:0 "州生産力"
  TRADE_GOODS_SIZE_MODIFIER:0 "州生産力補正"
  WE_EMBARGO:0 "$WHO|Y$は$TARGET|Y$に禁輸を実施しており、以下のノードで対象国の力の最大値が一定の割合減少しています。"
@@ -1363,7 +1363,7 @@
  NOMC_COLONY:0 "植民地は中核州にするには小さすぎます。"
  NOMC_TOFARAWAYTOCORE:0 "この州を中核州にできるようにするためには、我が国の中核州の一つに隣接している必要があります。"
  NOMC_TOFARAWAYTOCORE_RANGE:0 "この州は我が国の海上封鎖されていない最も近い中核州から§Y$DIST$§!の距離にあり、中核州にできる範囲（§R$MAX$§!）を超えています。"
- NOCHA_NO_POINTS:0 "この州の文化転向に§Y$COST$§W£dip£必要ですが、現在§Y$VAL$§Wしか持っていません。"
+ NOCHA_NO_POINTS:0 "この州の文化を転向するには§Y$COST$§W£dip£が必要ですが、§Y$VAL$§Wしか持っていません。"
  colonial_enthusiasm:0 "植民地への熱意"
  desc_colonial_enthusiasm:0 "野心的な人々の大きな集団が、植民地への移動に興味を持っている。"
  bad_free_trade_merchants:0 "外国商人の制限はない"
@@ -1461,20 +1461,20 @@
  CAN_NOT_SEIZXE_CAPITAL:0 "首都を奪うことはできません。"
  ONLY_SEIZE_ENEMY:0 "奪うことができるのは敵の州のみです！"
  SEIZE_NEED_CONTROL:0 "あなたがそれを奪うには、この州を支配する必要があります。"
- NOSC_NO_POINTS:0 "植民地を奪うには§Y$COST$§W£mil£が必要であり、あなたは現在§Y$VAL$§!しか持っていません。"
+ NOSC_NO_POINTS:0 "植民地を奪うには§Y$COST$§W£mil£が必要ですが、§Y$VAL$§!しか持っていません。"
  UNIT_SEIZE_COLONY:0 "§Y植民地を奪う§!"
  SEIZE_COLONY_DESC:0 "§Y$COST$§!£mil£で、この植民地または原住民の都市の恒久的£mil な支配権を奪います。"
  NOT_BURN_IN_COMBAT:0 "戦闘中に植民地を焼き払うことはできません。"
  ONLY_BURN_ENEMY:0 "敵の植民地のみ焼き払うことができます。"
  BURN_NOT_COLONY:0 "§Y植民地を焼き払う§!\n植民地のみ焼き払うことができます。"
  BURN_NEED_CONTROL:0 "§Y植民地を焼き払う§!\nあなたがこの植民地を焼き払うにはこの州を支配する必要があります。"
- NOBC_NO_POINTS:0 "§Y植民地を焼き払う§!\n植民地を焼き払うには§Y$COST$§W£mil£が必要ですが、あなたは§Y$VAL$§Wしか持っていません。"
+ NOBC_NO_POINTS:0 "§Y植民地を焼き払う§!\n植民地を焼き払うには§Y$COST$§W£mil£が必要ですが、§Y$VAL$§Wしか持っていません。"
  UNIT_BURN_COLONY:0 "§Y植民地を焼き払う§!\n植民地を焼き払うには§Y$COST$§W£mil£のコストがかかります。"
  NOT_AN_IN_COMBAT:0 "戦闘中に原住民を攻撃することはできません。"
  NO_NATIVES_TO_ATTACK:0 "ここには攻撃できる原住民がいません。"
  NO_NATIVES_ON_OTHER:0 "これは我々の土地ではなく、ここの原住民は保護下にあります。"
  NO_NATIVES_MOVING:0 "移動中に原住民を攻撃することはできません。"
- NONA_NO_POINTS:0 "原住民を攻撃するには§Y$COST$§W£mil が必要ですが、あなたは現在§Y$VAL$§Wしか持っていません。"
+ NONA_NO_POINTS:0 "原住民を攻撃するには§Y$COST$§W£mil£が必要ですが、§Y$VAL$§Wしか持っていません。"
  UNIT_ATTACK_NATIVS:0 "§Y原住民を攻撃§!"
  UNIT_ATTACK_NATIVES_DESC:0 "あなたの植民者を後に攻撃する脅威を排除するため、地元の人々を攻撃します。"
  ATTACK_NATIVES_COST:0 "これには§Y$COST$§!£mil£のコストがかかります。"
@@ -1485,7 +1485,7 @@
  NO_SCORCH_OTHER:1 "あなたが支配しているか、または敵が所有している州のみ焦土化することができます。"
  NO_SCORCH_AT_WAR:0 "戦争中のみ、焦土化を行うことができます。"
  NO_SCORCH_RETREATING:0 "退却しながら焦土化を行うことはできません。"
- NOSE_NO_POINTS:0 "この州を焦土化するには§Y$COST$§W£mil£が必要ですが、あなたは現在§Y$VAL$§Wしか持っていません。"
+ NOSE_NO_POINTS:0 "この州を焦土化するには§Y$COST$§W£mil£が必要ですが、§Y$VAL$§Wしか持っていません。"
  UNIT_SCORCH_PROVINCE_IRO:3 "焦土化には§Y$COST$§! £mil£が必要で、$NAME$に$TIME|Y$ヶ月の間、$MOD$の効果を与え、さらに荒廃を§R$AMOUNT$§!増加させ、以下の影響を与えます："
  desc_scorched_earth:0 "敵がこの州を使用できないよう、財産と資源は破壊されています。"
  LOGFILTER_logcat_combat:0 "軍事メッセージ"
@@ -1739,9 +1739,9 @@
  INC_M_ALREADY_MAX:0 "軍事化はすでに最高値です！"
  MIL_SOC_CHANGE:0 "我が国の軍事化は以下の要因により毎月$VAL$変化します：\n"
  GOV_IS_MIL_SOCIETY:0 "軍国化した社会では、軍事点が3未満の統治者は得ることができません。"
- INC_MIL_NO_POINTS:0 "あなたの国の軍事化を増加させるには少なくとも$COST|Y$の軍事力が必要ですが、あなたは$VAL|Y$しか持っていません！"
+ INC_MIL_NO_POINTS:0 "軍事化を増加させるには少なくとも$COST|Y$の軍事力が必要ですが、$VAL|Y$しか持っていません！"
  INC_MIL_DO_IT:0 "あなたの国の軍事化を§G+$EFFECT$§!増加させるため、$COST|Y$の軍事力を消費します。"
- STR_GOV_NO_POINTS:0 "政府を強化するには少なくとも$COST|Y$の軍事力が必要ですが、あなたは$VAL|Y$しか持っていません！"
+ STR_GOV_NO_POINTS:0 "政府を強化するには少なくとも$COST|Y$の軍事力が必要ですが、$VAL|Y$しか持っていません！"
  STR_GOV_DO_IT:0 "政府を強化し、$EFFECT$するために、$COST|Y$の軍事力を費やします。"
  STR_HORDE_UNITY:0 "$VAL|G$の遊牧民の結束を獲得"
  STR_LEGITIMACY:0 "$VAL|G$の正統性を獲得"
@@ -1784,14 +1784,14 @@
  ACCEPTED_CULTURES_COUNT:0 "文化の登用：$CURR$/$MAX$"
  ACCEPTED_CULTURE_SLOTS_DESC:0 "$MAX|Y$のうち$FREE|Y$の空き文化の登用スロットを持っています。\n文化を登用するには、登用されていない文化の§Y文化の登用§!ボタンをクリックします。\nスロットの数は以下によって計算されます：\n"
  ADD_ACC_CULTURE_TOO_MANY:0 "我々はすでに$CURR|Y$の文化を登用しており、我々のアイデアと技術では最大$MAX|Y$の登用文化しか持つことはできないため、これ以上文化を登用することができません。"
- SET_PRIMARY_CULTURE_NO_POINTS:0 "主要文化を転向するには$COST|Y$の外交力が必要ですが、あなたは現在$VAL|Y$しか持っていません！"
+ SET_PRIMARY_CULTURE_NO_POINTS:0 "主要文化を転向するには$COST|Y$の外交力が必要ですが、$VAL|Y$しか持っていません！"
  SET_PRIMARY_CULTURE_COST:0 "主要文化を$NAME|Y$に転向すると$COST|Y$の外交力が必要です。"
  SET_PRIMARY_CULTURE_WRONG_TYPE:0 "$NAME|Y$は、受容文化ではなく、$GROUP|Y$文化グループに属する文化でもないため、それを主要文化とすることはできません。"
- SET_PRIMARY_CULTURE_TOO_WEAK:0 "$NAME|Y$文化を主要文化とするにはあなたのステートで少なくとも§Y$NEED$%§!の開発度が必要ですが、あなたは現在§Y$VAL$%§!しか持っていません。"
- ADD_ACCEPTED_CULTURE_NO_POINTS:0 "主要文化を受容文化とするには少なくとも$COST|Y$の外交力が必要ですが、あなたは現在$VAL|Y$しか持っていません。"
+ SET_PRIMARY_CULTURE_TOO_WEAK:0 "$NAME|Y$文化を主要文化とするにはあなたのステートで少なくとも§Y$NEED$%§!の開発度が必要ですが、§Y$VAL$%§!しかありません。"
+ ADD_ACCEPTED_CULTURE_NO_POINTS:0 "主要文化を受容文化とするには少なくとも$COST|Y$の外交力が必要ですが、$VAL|Y$しか持っていません。"
  ADD_ACCEPTED_CULTURE_COST:0 "$NAME|Y$を登用して受容文化とするには$COST|Y$の外交力が必要です。"
- ADD_ACC_CULTURE_TOO_WEAK:0 "$NAME|Y$文化を登用して受容文化とするにはあなたのステートで少なくとも$NEED|Y$の開発度が必要ですが、あなたは$VAL|Y$の開発度しか持っていません。"
- REM_ACCEPTED_CULTURE_NO_POINTS:0 "登用した文化を除去するには$COST|Y$の外交力が必要ですが、あなたは$VAL|Y$しか持っていません！"
+ ADD_ACC_CULTURE_TOO_WEAK:0 "$NAME|Y$文化を登用して受容文化とするにはあなたのステートで少なくとも$NEED|Y$の開発度が必要ですが、$VAL|Y$の開発度しかありません。"
+ REM_ACCEPTED_CULTURE_NO_POINTS:0 "登用した文化を除去するには$COST|Y$の外交力が必要ですが、$VAL|Y$しか持っていません！"
  REM_ACCEPTED_CULTURE_COST:0 "登用された文化である$NAME|Y$を除去するには$COST|Y$の外交力が必要です。"
  CULTURE_VIEW_IS_IN_GROUP:0 "$NAME|Y$は$GROUP|Y$グループに属します。"
  CULTURE_VIEW_DEV_EXPLAIN:0 "この文化に属する我々のステートの中核州の開発量は、$DEV|Y$（ステートの中核州の合計の§Y$PERC$%§! ）です。"
@@ -1831,7 +1831,7 @@
  CV_REBEL_HANDLE_DESC:0 "反乱軍を処理するための別の方法を表示します。"
  CV_REBEL_PROGRESS_DESC:0 "彼らの要求の強制に向けての進捗は$PROGRESS|%Y1$です。"
  CV_REBEL_LEADER_DESC:0 "反乱軍の指揮官は§Y$NAME$§!です。"
- CV_DISASTERS_DESC:0 "国難は混乱の時にあなたの国を襲う一連の悪い出来事です。国難のための開始条件が満たされると、その進捗は、別々の補正値の集まりに応じた率で毎月更新され始めます。進行中の国難は、開始条件とは別の一連の停止条件を満たすことによって完全に停止することができます。進捗状況が100％に達すると、国難が始まり、終了条件が満たされるまで国難が継続されます。"
+ CV_DISASTERS_DESC:0 "国難は混乱の時にあなたの国を襲う一連の悪い出来事です。国難のための開始条件が満たされると、その進捗は、別々の補正値の集まりに応じた率で毎月更新され始めます。進行中の国難は、開始条件とは別の一連の停止条件を満たすことによって完全に停止することができます。進捗状況が100%に達すると、国難が始まり、終了条件が満たされるまで国難が継続されます。"
  CV_STABILITY_DESC:1 "国家の§Y安定度§!は§Y州§!の§Y不穏度§!や、他の様々なことに影響を与えます。"
  CV_WAREX_PROGRESS:0 "現在の戦争疲弊度は§Y$WE$/$MAX$§!です。"
  CV_WAREX_NONE:0 "戦争疲弊はありません。"
@@ -3619,7 +3619,7 @@
  rajput_musketeerDESCR:0 "火器の開発が進展するにつれ、インドの銃士の装備は高品質なものへと向上した。ムガルが銃士を狙撃兵や射手として引き続き使用するため、精密で長射程のものが優先された。 ムガルはまた、中央権威への直接奉仕において銃士の使用を継続するつもりだろう（マンサブダーリー制の下での騎兵の武器とは対照的である）。"
  reformed_mughal_mansabdarDESCR:0 "パンジャーブのシーク教徒は、ペルシア軍とアフガニスタン軍に触発されたであろう特殊な騎兵戦闘様式を開発した。これは、「dhai-phat」または「2つ半」の襲撃と呼ばれていた。騎兵の一団が敵に乗り込み、火縄銃を発射し、退却し、これを繰り返す。敵が十分に弱体化したところで、サーベルを持った騎兵の大群が突撃した。同様に、多くの北インドの国家では、その地域の多くのアフガン部族から多くの場合採用された、マスケット銃を携帯した騎兵部隊を軍に組み入れるようになった。"
  indian_shock_cavalryDESCR:0 "丘陵、ジャングル、そして多くの砦がある西デカン地域は、大規模で重装備のムガル軍にとって征服するのがかなり難しいことが明らかになった。生き残るための絶望的な戦いで、アフマドナガルのスルタンはムガル軍が嫌う軽騎兵の使用を開始した。 アフマドナガルによって採用されたマラーターの騎手たちは大きな成功を収め、他の支配者たちにもすぐに雇われるようになった。"
- bhonsle_infantryDESCR:0 "ベラドやマバルのようなカナラ、デシュ、マノレナードゥ地方の多くの部族は早い時期に狩猟や戦争のために火縄式のマスケット銃を採用した。兵器に精通していることから、これらの部族はすぐに南インドの主要な兵士となった。特にマラーター軍は、軍への歩兵の徴用に関して、これらの部族集団に依存するようになった。軍隊における部族組織は多くの場合維持され、首長は士官として奉仕していた。ベラドとマバルは、17〜18世紀にマラーター、ムガル、マイソールの軍隊にますます展開され、最終的にはこの地域の将来のヨーロッパ式歩兵連隊の中核を形成するだろう。"
+ bhonsle_infantryDESCR:0 "ベラドやマバルのようなカナラ、デシュ、マノレナードゥ地方の多くの部族は早い時期に狩猟や戦争のために火縄式のマスケット銃を採用した。兵器に精通していることから、これらの部族はすぐに南インドの主要な兵士となった。特にマラーター軍は、軍への歩兵の徴用に関して、これらの部族集団に依存するようになった。軍隊における部族組織は多くの場合維持され、首長は士官として奉仕していた。ベラドとマバルは、17～18世紀にマラーター、ムガル、マイソールの軍隊にますます展開され、最終的にはこの地域の将来のヨーロッパ式歩兵連隊の中核を形成するだろう。"
  indian_archersDESCR:0 "象はほとんどのインド軍隊の共通の要素であったが、指揮官によって騎兵や歩兵の補足として、より少ない数しか利用されなかった。しかし、オリッサやバスタールのようなジャングルで支配された地域では、馬は効果的に使うのも、健康を保つのも困難であった。その結果、これらの地域の軍隊は、移動できる射手の足場として使用される、より大きな象のユニットに多くを依存していた。"
  indian_arquebusierDESCR:0 "インド軍の歩兵戦術の開発に一般的な関心がないことから、火力のある武器の出現は当初大きな影響を及ぼさなかった。一般的なインド軍では、それらは長い間、歩兵部隊の多くを占めることはなく、火器は特定の隊形に採用されるよりも、個々の方法によって使用され続けた。インドの国家は、自国の部隊に新しい武器を装備するより、射手や砲兵を補給するために外国人、多くの場合、トルクメン人銃兵を雇うことで満足していたようだ。"
  rajput_hill_fightersDESCR:0 "ムスリム勢力の到来により、インドへの優れた外国の乗馬騎兵の流入が増加した。ムスリム軍事戦術の利用は、ヴィジャヤナガル帝国のようなヒンドゥー教徒の国家の軍隊においてさえ、最終的には一般的なものとなった。北西では、ラージプートの戦士たちがすぐにインドのスルタン国の戦術に順応し、新しい品種のラージプート騎兵の馬もまもなく登場した。これらのマルワリ馬の世話と繁殖は、非常に戦闘的なラージプート社会では、儀式的で尊敬される役割を果たすだろう。南インドの気候においては、馬の繁殖はより困難であり、南インドの支配者はインド洋の交易商に頼って騎兵を養成しなければならなかった。"
@@ -3690,7 +3690,7 @@
  AGGRESSIVE_EXPANSION_PENALTY_SAMERELIGION_GROUP:0 "対象が同じ宗教グループである"
  GGRESSIVE_EXPANSION_PENALTY_OTHERRELIGION_GROUP:0 "対象が違う宗教グループである"
  AGGRESSIVE_EXPANSION_PENALTY_HRE_INTERNAL:0 "対象が帝国内"
- AGGRESSIVE_EXPANSION_PENALTY_DEV:0 "$COUNTRY$の開発合計"
+ AGGRESSIVE_EXPANSION_PENALTY_DEV:0 "$COUNTRY$の総開発度"
  HAS_NOT_OWNER_ACCEPTED_CULTURE:0 "所有者の受容文化でない"
  HAS_OWNER_ACCEPTED_CULTURE:0 "所有者の受容文化である"
  HAS_NO_TRUCE:0 "停戦していない"
@@ -4710,7 +4710,7 @@
  TOOLTIP_TOGGLE_ALLOW_ATTACH_ARMY:0 "友軍がこの軍隊に接触することを許可"
  TOOLTIP_TOGGLE_ALLOW_ATTACH_NAVY:0 "友軍の艦隊がこの艦隊に接触することを許可"
  PRODUCTION_MODIFIER_EXCEPTION:0 "この州は§Y$NAME$§!を生産します、これは生産補正の影響を受けません。"
- NOREDUCE_INFLATION_NO_POINTS:0 "インフレの減少に§Y$COST$§W £adm£必要ですが、あなたは§Y$VAL$§Wしか持っていません。"
+ NOREDUCE_INFLATION_NO_POINTS:0 "インフレの減少には§Y$COST$§W£adm£が必要ですが、§Y$VAL$§Wしか持っていません。"
  CAN_RELEASE_CN_WE_ARE_AT_WAR:0 "§R－我々は戦争中です§!"
  CONTINUE_GAME:0 "ゲームを続ける"
  OPEN_SIEGE_VIEW:0 "包囲情報画面を開く"
@@ -4975,7 +4975,7 @@
  NOAB_YOU_ARE_DEFENDING:1 "あなた自身の要塞を砲撃することはできません。"
  NOAB_NOT_LEADING:2 "包囲中でないまたは宗主国として参加していない場合、砲撃命令は出せません。"
  NO_NAVAL_BARRAGE_NOT_ENOUGH_CANNONS:0 "あなたは現在$CANNONS_CURRENT|Y$を持っており、砲撃の命令を出すことは出来ません。"
- NO_NAVAL_BARRAGE_POINTS:0 "艦砲射撃の命令を出すには$COST|Y$£mil 必要ですが、現在$CURRENT|Y$しか持っていません。"
+ NO_NAVAL_BARRAGE_POINTS:0 "艦砲射撃を命令するには$COST|Y$£mil£が必要ですが、$CURRENT|Y$しか持っていません。"
  NO_NAVAL_BARRAGE_NO_COAST:0 "海岸線のない州へ艦砲射撃の命令を出すことはできません。"
  NO_NAVAL_BARRAGE_NO_NAVIES:0 "あなたは隣接海域に艦砲射撃が実行できる海軍を持っていません。"
  NAVAL_BARRAGE_CANNON_REQ:0 "艦砲射撃を命令するには、要塞のレベル毎に§Y100§!以上の砲を持つ必要があります。この要塞に対して砲撃を命令するには、$CANNONS_NEEDED|Y$以上必要です。"
