--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -136,8 +136,8 @@
  WARSCORE_COST_MIN_COST:0 "§Y$VALUE$%§!の最低コスト\n"
  WARSCORE_COST_MAX_COST:0 "§Y$VALUE$%§!の最大コスト\n"
  WARSCORE_COST_TOTAL:0 "§Y$ADJ$§!の州をすべて奪うために必要な戦勝点コストは§Y$VALUE$§!です。"
- ADDED_CARDINAL:0 "§Y$PROVINCE$§!は、新しい枢機卿の所在地となります。"
- REMOVED_CARDINAL:0 "§Y$PROVINCE$§!は、もはや枢機卿の所在地ではありません。"
+ ADDED_CARDINAL:0 "§Y$PROVINCE$§!が新しい枢機卿の所在地となります。"
+ REMOVED_CARDINAL:0 "§Y$PROVINCE$§!はもはや枢機卿の所在地ではありません。"
  ALLIED_OBJECTIVE_NO_WAR:0 "$ENEMY$とは戦争中ではありません。\n"
  ALLIED_OBJECTIVE_DESC:0 "$ENEMY$との戦争における同盟国にこの州を包囲してもらいたい場合、$PROVINCE$を目標地点として設定することで彼らはその地点を包囲することを試みてくれるでしょう。"
  ALLIED_OBJECTIVE_SET_DESC:0 "$ALLIED$は、この州を包囲しようとします。"
@@ -738,9 +738,9 @@
  aow_events.42.t:0 "[From.GetName]が[From.Religion.GetName]の反乱軍に資金を提供！"
  aow_events.42.d:0 "[From.GetName]を得るため、彼らが広めた異端の責任を引き受けた我々の努力は、裏目に出ているようだ。彼らは国教に対する反抗運動を受け入れたばかりでなく、公然とさらなる暴動を誘発し、異端者たちが自らの主張により自信を持つことへと繋がっている。これらの狂気によって我々の土地に流れたすべてのカトリックの血は、今や彼らの手の中にある。"
  aow_events.42.a:0 "罪の中にとどまっている者たちに、赦免があってはならない。"
- aow_events.43.t:0 "越境した枢機卿"
- aow_events.43.d:1 "時には、何かをしたように見えることなく、何かを動かす機会があるものだ。最近、[send_cardinal_province.GetName]で暮らす枢機卿が[Root.GetName]の諜報員に、[receive_cardinal_province.GetName]へと越境することを検討しており、いくらかの対価と引き換えに教皇庁内で我々を支持することを認めたことで、そのような機会が到来した。これは魅力的かもしれないが、我々がこれを利用すれば支払う対価は高くなるかもしれない。彼が捨てた[send_cardinal_province.Owner.GetUsableName]の怒りである。"
- aow_events.43.a:0 "我々は彼らが決して見出すことのない機会を得るだろう。"
+ aow_events.43.t:0 "枢機卿の越境"
+ aow_events.43.d:1 "時には、何かをしたように見えることなく、何かを動かす機会があるものだ。最近、[send_cardinal_province.GetName]で暮らす枢機卿が[Root.GetName]の諜報員に、[receive_cardinal_province.GetName]へと越境することを検討しており、いくらかの対価と引き換えに教皇庁内で我々を支持することを認めたことで、そのような機会が到来した。これは魅力的かもしれないが、我々がこれを利用すれば支払う対価－彼が捨てた[send_cardinal_province.Owner.GetUsableName]の怒り－は高くなるかもしれない。"
+ aow_events.43.a:0 "奴らが決して見出すことのない機会をものにしよう。"
  aow_events.43.b:0 "危険を冒す価値はないが、彼を見つけた者は昇進に値する。"
  aow_events.44.t:0 "買収された枢機卿が移動"
  aow_events.44.d:0 "[Root.GetName]の国境近くかつて滞在していた枢機卿は、今や我が国を完全に離れ、彼の忠誠を隣人に移した。我々を裏切るよう彼に賄賂を贈った[From.GetAdjective]の諜報員は、おそらく我々がこの問題において彼らの関与に気づかないだろうと思ったかもしれないが、彼らは間違っていた。教皇庁における我々の影響力を意図的に妨害することは容認できず、彼らの独り舞台となることは無いだろう。"
