--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -369,7 +369,7 @@
  CURIA_CONTRIBUTION_ENTRY:0 "$NAME|Y$における$ESTATE$（$PERC|2%$）：$VAL|Y2$¤\n"
  AND_FROM_X_MORE_COUNTRIES:0 "さらに$NUM|Y$の小国も貢献しています…"
  CURIA_CALL_ECUMENICAL_COUNCIL:0 "$COST|Y$¤を使ってトリエント公会議を召集します。$TREASURY|Y$¤が教皇庁の国庫に入り、次の教皇の支配者になるため§Y$INFLUENCE$§Wの投資された影響力を獲得します。"
- CURIA_CALL_ECUMENICAL_COUNCIL_NOT_ENOUGH_MONEY:0 "§R公会議を召集するには$COST|Y$¤が必要ですが、あなたは$AVAILABLE|Y$¤しか持っていません。§!"
+ CURIA_CALL_ECUMENICAL_COUNCIL_NOT_ENOUGH_MONEY:0 "§R公会議を召集するには$COST|Y$¤が必要ですが、$AVAILABLE|Y$¤しか持っていません。§!"
  CURIA_CALL_ECUMENICAL_COUNCIL_TITLE:0 "公会議を召集"
  CURIA_CALL_ECUMENICAL_COUNCIL_DESC:0 "$COST|Y$¤を使ってトリエント公会議を召集しますか？$TREASURY|Y$¤が教皇庁の国庫に入り、次の教皇の支配者になるため§Y$INFLUENCE$§Wの投資された影響力を獲得します。"
  CURIA_BUY_INDULGENCE:1 "$COST|Y$¤を使ってあなたの罪に対して免罪符を購入します。$TREASURY|Y$¤が教皇庁の国庫に入り、あなたは年間$INFLUENCE|G$の教皇への影響力を$YEARS|Y$年間獲得します。教皇はこの自発的な申し出に感謝し、それゆえ、これは彼と我々の関係を良くするでしょう。"
@@ -377,7 +377,7 @@
  CURIA_BUY_INDULGENCE_TITLE:0 "免罪符の購入"
  CURIA_BUY_INDULGENCE_DESC:0 "$COST|Y$¤を使ってあなたの罪に対して免罪符を購入しますか？$TREASURY|Y$¤が教皇庁の国庫に入り、あなたは年間$INFLUENCE|G$の教皇への影響力を$YEARS|Y$年間獲得します。教皇はこの自発的な申し出に感謝し、それゆえ、これは彼と我々の関係を良くするでしょう。"
  CURIA_BUY_INDULGENCE_ALREADY_BOUGHT:0 "§Rあなたはすでに罪のために免罪符を購入しており、現時点ではいかなる量の金も教皇の心を変えることはできません。§!"
- CURIA_BUY_INDULGENCE_NOT_ENOUGH_MONEY:0 "§R免罪符の購入には$COST|Y$¤が必要ですが、あなたは$AVAILABLE|Y$¤しか持っていません§!"
+ CURIA_BUY_INDULGENCE_NOT_ENOUGH_MONEY:0 "§R免罪符の購入には$COST|Y$¤が必要ですが、$AVAILABLE|Y$¤しか持っていません§!"
  EXCOM_TARGET_BOUGHT_INDULGENCE:0 "§R目標は罪のために免罪符を購入しました、あなたは今彼を破門することはできません。§!"
  EXCOMM_INDULG:1 "これは自国及び全ての自国の同君連合国の破門を取り消してくれるでしょう！"
  bought_Indulgence:0 "免罪符を購入した"
@@ -393,7 +393,7 @@
  APPOINT_CARDINAL_TOO_MANY_IN_COUNTRY:0 "§R同じ国家内で$MAX$以上の枢機卿を任命することはできません。§!"
  APPOINT_CARDINAL_TOO_MANY_IN_WORLD:0 "§R世界にはすでに十分な枢機卿がいます。さらにもう1人任命すると、神に与えられた我々の権威が不安定になるでしょう。§!"
  APPOINT_CARDINAL_NO_PROVINCE_AVAILABLE:0 "§R我々が枢機卿を任命するのに適した州はありません。§!"
- APPOINT_CARDINAL_NEED_MORE_CASH:0 "§R枢機卿の任命には$REQUIRED$¤必要ですが、あなたは$AVAILABLE$¤しか持っていません。§!"
+ APPOINT_CARDINAL_NEED_MORE_CASH:0 "§R枢機卿の任命には$REQUIRED$¤が必要ですが、$AVAILABLE$¤しか持っていません。§!"
  CURIA_APPOINT_CARDINAL:2 "自身の金のうち$COST|Y$¤を使って支持者の1人を枢機卿に任命します。これにより我々に$CORRUPTION|R$の汚職が派生し、次の教皇の支配者となるために投資された影響力が、毎年$INFLUENCE|Y$増加します。"
  CURIA_APPOINT_CARDINAL_SELF_TITLE:0 "支持者を枢機卿に任命"
  CURIA_APPOINT_CARDINAL_SELF_DESC:1 "$COST|Y$¤を使って支持者の1人を枢機卿に任命しますか？これにより我々に$CORRUPTION|R$の汚職が派生し、次の教皇の支配者となるために投資された影響力が、毎年$INFLUENCE|Y$増加します。"
