--- a/source/localisation/emperor_mercs_l_english.yml
+++ b/source/localisation/emperor_mercs_l_english.yml
@@ -97,12 +97,12 @@
  COMPANY_IS_NOT_TEMPLATE:0 "$COMPANY|Y$ではない。"
  KILL_MERCENARY_COMPANY_LEADER:0 "$COMPANY|Y$の将軍$NAME|Y$は死んでしまうだろう！"
  CONVERT_MERCENARY_COMPANY_LEADER:0 "$COMPANY|Y$の将軍$NAME|Y$（$FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$）は我らの将軍になるだろう！"
- COMPANY_HAS_MANPOWER:0 "$VAL|Y$％以上の人的資源が残っている。"
- COMPANY_HAS_NOT_MANPOWER:0 "残りの人的資源が$VAL|Y$％未満である。"
+ COMPANY_HAS_MANPOWER:0 "$VAL|Y$%以上の人的資源が残っている。"
+ COMPANY_HAS_NOT_MANPOWER:0 "残りの人的資源が$VAL|Y$%未満である。"
  COMPANY_HIRED_MONTHS:0 "雇用されて$VAL|Y$ヶ月以上である"
  COMPANY_NOT_HIRED_MONTHS:0 "雇用されて$VAL|Y$ヶ月未満である"
- COMPANY_ADD_MANPOWER:1 "$COMPANY|Y$は人的資源の$VAL|Y$％を取り戻すだろう。"
- COMPANY_LOSE_MANPOWER:1 "$COMPANY|Y$は人的資源の$VAL|R$％を失うだろう。"
+ COMPANY_ADD_MANPOWER:1 "$COMPANY|Y$は人的資源の$VAL|Y$%を取り戻すだろう。"
+ COMPANY_LOSE_MANPOWER:1 "$COMPANY|Y$は人的資源の$VAL|R$%を失うだろう。"
  ONLY_MERCENARY_MODIFIER:0 "§Y傭兵連隊のみに影響します§!"
  merc_swiss_guard:0 "スイス衛兵"
  merc_bande_nere:0 "バンデ・ネーレ"
@@ -180,7 +180,7 @@
  merc_crabats:0 "クラバット"
  merc_free_swiss_guard:0 "独立スイス衛兵"
  merc_colonial_rangers:0 "植民地突撃隊"
- merc_independent_cossack_host:0 "独立コサック群"
+ merc_independent_cossack_host:0 "独立コサック軍"
  merc_kazakh_company:0 "カザフ団"
  merc_yaka_free_warriors:0 "ヤカ自由戦士団"
  merc_great_lakes_free_warriors:0 "大湖沼自由戦士団"
