--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1364,7 +1364,7 @@
  EVTOPTA5065:0 "彼ら自身で解決させよう。"
  EVTOPTB5065:0 "この状況を制御しよう。"
  EVTNAME5066:0 "教会機能の停止"
- EVTDESC5066:1 "[Root.GetNobilityName]のいくつかの一族が、提案を携え[Root.GetRulerTitleOrRegency]の前にやって来た。より多くの土地と称号を求めるのに必死な彼らは、かなりの土地を所有する[Root.GetClergyName]に羨望の眼差しを向けている。彼らは、[Root.GetStateForm]の尽力に対する多額の現金の寄付と引き換えに、教会の土地を彼らに譲渡するように求めている。もちろん、この短期的な収入の増加と引き換えに、我々は長期的に見ると、教会の土地からの税収を失うことになる。"
+ EVTDESC5066:1 "数人の[Root.GetNobilityName]が、提案を携え[Root.GetRulerTitleOrRegency]の前にやって来た。より多くの土地と称号を求めるのに必死な彼らは、かなりの土地を所有する[Root.GetClergyName]に羨望の眼差しを向けている。彼らは、[Root.GetStateForm]の尽力に対する多額の現金の寄付と引き換えに、教会の土地を彼らに譲渡するように求めている。もちろん、この短期的な収入の増加と引き換えに、我々は長期的に見ると、教会の土地からの税収を失うことになる。"
  EVTOPTA5066:0 "受け入れよう。"
  EVTOPTB5066:0 "拒否しよう。"
  EVTNAME5068:0 "公的機関の売却"
