--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -8,7 +8,7 @@
  republic_different_religions_group:0 "異教"
  republic_different_religion_same_group:0 "異端"
  same_religion:0 "同宗教"
- same_secondary_religion:0 "同じ融合信仰"
+ same_secondary_religion:0 "同じ融合した信仰"
  different_religions_group:0 "異教"
  different_religion_same_group:0 "異端"
  at_war:0 "戦争中"
