--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -984,8 +984,8 @@
  desc_hun_curtailing_banditry_in_upper_hungary:0 "我々は失業した傭兵が率いるこの地域の盗賊の発生に対して積極的に戦っている。"
  hun_black_army:0 "黒軍"
  desc_hun_black_army:0 "我々は軍隊を組織化して、コストがかかるものの専門的な常設部隊を持っている。我々は他のどの国よりも効率的に傭兵部隊を用いることができるが、そのためのコストは、軍隊が存在する限り、我々の経済の負担であり続けるだろう。"
- EST_VAL_ABOLISHED_BLACK_ARMY:0 "黒軍の廃止: §Y$VAL$%§!"
- EST_VAL_BLACK_ARMY:0 "黒軍: §Y$VAL$%§!"
+ EST_VAL_ABOLISHED_BLACK_ARMY:0 "黒軍の廃止：§Y$VAL$%§!"
+ EST_VAL_BLACK_ARMY:0 "黒軍：§Y$VAL$%§!"
  mercenary_concessions:0 "傭兵への譲歩"
  desc_mercenary_concessions:0 "我々は、反乱を防ぐために、傭兵の船長とその従者たちにこの地域の土地を与えている。"
  hun_poorly_maintained_fortifications:0 "貧弱に維持された要塞"
@@ -1896,7 +1896,7 @@
  desc_preferred_jain_bankers:0 "ジャイナ教徒の銀行業を営む一族への選好は、金利の低下という形で払い戻されている。"
  preferred_brahmin_bankers:0 "バラモンの銀行家の選好"
  desc_preferred_brahmin_bankers:0 "我が国民は、国家財政が責任あるバラモンの手中に握られているという事実に安心している。"
- jain_administration:0 "統治者のジャイナ教徒"
+ jain_administration:0 "行政内のジャイナ教徒"
  desc_jain_administration:0 "ジャイナ教徒の銀行家、行使、および行政官は、国務をうまくやっている。"
  paryushana:0 "パリユーシャン"
  desc_paryushana:0 "この州のジャイナ教徒は、瞑想と許しによって特徴づけられた宗教的行事、パリユーシャンを祝っている。"
@@ -2017,7 +2017,7 @@
  desc_revoked_estate_modifier:0 "この州の地方の権力者を潰して以来、法律や秩序が悪化している。現地の者達は変化に反対するようになり、少なくとも今のところ、中央権力を非難している。"
  maratha_benign_neglect:0 "マラーターの傍観"
  desc_maratha_benign_neglect:0 "マラーターがこの州を多大な自治を持って支配する事を許した。その代わり、彼らは農民から徴兵する事によって我が軍隊を増強する。"
- EST_VAL_NOBLE_ELITE:0 "貴族エリート: §Y$VAL$％§!"
+ EST_VAL_NOBLE_ELITE:0 "貴族エリート：§Y$VAL$%§!"
  tibet_restored_pala:0 "パーラ王国の復活"
  desc_tibet_restored_pala:0 "パーラ王国が我が従属国として復活した事で、チベット帝国の復活が保証されたようである。"
  tibet_china_defeated:0 "中国の打破"
