Save/Update files [ci skip]

--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -850,13 +850,13 @@
  PLACE_RELATIVE_ON_THRONE_WHAT:0 "我々の王位に$NAME$を任命します。"
  START_COLONIAL_WAR:0 "植民地で戦争を始める"
  REPLACE_GOVERNOR:0 "総督の更迭"
- PROMOTE_INVESTMENTS:0 "投資を促進する"
+ PROMOTE_INVESTMENTS:0 "投資の促進"
  SUPPORT_LOYALISTS:0 "体制派への支援"
  NO_EXPENSE_SUPPORT_LOYALISTS:0 "どこにおいても体制派を支援していません。"
  ENABLE_X:0 "$X$の有効化"
  DISABLE_X:0 "$X$を無効化"
  ENDED_X:0 "$X$を終了"
- CV_INFLATION_FROM_TRADE_COMPANIES:0 "交易会社での投資を促進することは、年間のインフレを$VAL|Y$増加させます。"
+ CV_INFLATION_FROM_TRADE_COMPANIES:0 "交易会社での投資の促進は、年間のインフレを$VAL|Y$増加させます。"
  subject_interaction_events.1.t:0 "僭称者[Root.Monarch.GetTitle]の台頭"
  subject_interaction_events.1.d:0 "前任者で現在は退位した[Root.Country.GetName]の君主には、かなり大きな一族がおり、少なくとも彼らの一人は[Root.Monarch.GetTitle][Root.Monarch.GetName]よりも[Root.Country.GetName]の王位に対するよりすぐれた主張を持っていると信じている。彼らはかなり大きな支持者を集めることに成功し、王位に真の[Root.Monarch.GetTitle]を置くことを意図して、[Root.Capital.GetName]に向かって行軍している。"
  subject_interaction_events.1.a:0 "宗主国に助けを求める。"
