--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -230,17 +230,17 @@
  SUFRI:0 "スフーリ"
  NAJADAT:0 "ナジャダット"
  AZRAQI:0 "アズラキー"
- construct_kiel_canal_title:0 "キール運河を建設"
+ construct_kiel_canal_title:0 "キール運河の建設"
  construct_kiel_canal_desc:0 "ユトランド半島を横切ってバルト海と北海をつなげる運河を建設するのは、まさに超巨大な工事となるであろうがその完成は我々の船の移動時間を大幅に削るだろう。しかしそのプロジェクトは費用が莫大で、しかも別の問題も生まれてくるだろう…"
- construct_suez_canal_title:0 "スエズ運河を建設"
+ construct_suez_canal_title:0 "スエズ運河の建設"
  construct_suez_canal_desc:0 "地中海を紅海につなぐためにシナイ半島とアフリカを分かつ運河を切り開くことは、本当に大きな仕事です。完成の暁には、我々の船の移動時間は大幅に短縮されるだろう。しかしプロジェクトは非常に高価で、しかも途中で追加の問題に遭遇するかもしれません…"
- construct_panama_canal_title:0 "パナマ運河を建設"
+ construct_panama_canal_title:0 "パナマ運河の建設"
  construct_panama_canal_desc:0 "大西洋と太平洋をつなげるためパナマ地峡に運河を切り開くことは、本当に大きな仕事です。完成の暁には、我々の船の移動時間は大幅に短縮されるだろう。しかしプロジェクトは非常に高価で、しかも途中で追加の問題に遭遇するかもしれません…"
- cancel_kiel_canal_title:0 "キール運河の建設を中止"
+ cancel_kiel_canal_title:0 "キール運河建設の中止"
  cancel_kiel_canal_desc:0 "キール運河建設は、費用が高すぎるとされ中止されます。"
- cancel_suez_canal_title:0 "スエズ運河の建設を中止"
+ cancel_suez_canal_title:0 "スエズ運河建設の中止"
  cancel_suez_canal_desc:0 "スエズ運河建設は、費用が高すぎるとされ中止されます。"
- cancel_panama_canal_title:0 "パナマ運河の建設を中止"
+ cancel_panama_canal_title:0 "パナマ運河建設の中止"
  cancel_panama_canal_desc:0 "パナマ運河建設は、費用が高すぎるとされ中止されます。"
  canal_events.EVTNAME1:0 "雑な計画作成"
  canal_events.EVTDESC1:0 "[Root.GetName]での運河建設の準備は不十分のようだ。雑な計画作成のせいで工事にいくつかの妨げが発生している。委員会を招集して工事全体を再編・再計画して遅れを取り戻そう。"
