--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -888,8 +888,8 @@
  TRUCE_WITH_COUNTRY:0 "$SELECTED|Y$は$COUNTRY|Y$と$DATE|Y$まで停戦中です"
  GRANTFREECITYREQDESC_REFORM:0 "\n§R了承すると、現在のレベル1政府改革$CURRENT|Y$は廃止されます。§!"
  FABRICATE_CLAIM_FOR_VASSAL_SELECT_DESC:0 "請求権の捏造は、我が国の$ADJ|Y$諜報網規模を$COST|R$減少させた上で、$SUBJECT|Y$に§Y$PROV$§Wへの請求権をもたらします。この請求権は$YEARS|Y$年間有効です。"
- BENEFIT_FOR_EMPEROR_PER_PRINCE:1 "皇帝が以下を得る（諸侯の数による）：\n$MODIFIER$"
- BENEFIT_FOR_ELECTOR_PER_PRINCE:1 "選帝侯が以下を得る（諸侯の数による）：\n$MODIFIER$"
+ BENEFIT_FOR_EMPEROR_PER_PRINCE:1 "皇帝が以下を得る（諸侯の数に応じて）：\n$MODIFIER$"
+ BENEFIT_FOR_ELECTOR_PER_PRINCE:1 "選帝侯が以下を得る（諸侯の数に応じて）：\n$MODIFIER$"
  BENEFIT_FOR_EVERYONE:1 "帝国の全ての国家が以下を得る：\n$MODIFIER$"
  ENEMY_STRENGTH_UNACCOUNTED:0 "参戦要請される可能性のある国の兵力について一切の情報を持ち合わせていません。"
  CURIA_BUY_INDULGENCE_AT_WAR:0 "§R現在あなたの破門を巡る戦争を戦っています。§!"
